--- a/MISA.QuanLyTaiSan.Common/Resources/Resource.resx
+++ b/MISA.QuanLyTaiSan.Common/Resources/Resource.resx
@@ -141,9 +141,17 @@
     <value>Update to database return 0</value>
     <comment>Message cho dev đọc khi Update bản ghi vào database thất bại</comment>
   </data>
+  <data name="DevMsg_ValidateDuplicateCode" xml:space="preserve">
+    <value>Error asset duplicate exception </value>
+    <comment>Thông báo cho dev khi gọi api bị mã tài sản tồn tại</comment>
+  </data>
   <data name="DevMsg_ValidateFailed" xml:space="preserve">
     <value>One or more validation errors occurred</value>
     <comment>Message cho dev đọc khi Validate dữ liệu đầu vào thất bại</comment>
+  </data>
+  <data name="DuplicateKeyEntry" xml:space="preserve">
+    <value>DuplicateKeyEntry</value>
+    <comment>Lỗi mã tài sản bị trùng khi vào DB</comment>
   </data>
   <data name="MoreInfo_DeleteFailed" xml:space="preserve">
     <value>https://openapi.misa.com.vn/errorcode/7</value>
@@ -174,11 +182,11 @@
     <comment>Template string cho procedure lấy 1 bản ghi theo ID</comment>
   </data>
   <data name="Proc_DeleteByID" xml:space="preserve">
-    <value>Proc_{0}_DeleteByID</value>
+    <value>Proc_FixedAsset_DeleteByID</value>
     <comment>Template string cho procedure xóa 1 bản ghi</comment>
   </data>
   <data name="Proc_DeleteByIDs" xml:space="preserve">
-    <value>Proc_{0}_DeleteByIDs</value>
+    <value>Proc_FixedAsset_DeleteByIDs</value>
     <comment>Template string cho procedure xóa nhiều bản ghi theo danh sách id</comment>
   </data>
   <data name="Proc_DuplicateCode" xml:space="preserve">
@@ -202,8 +210,15 @@
     <comment>Template string cho procedure lấy nhiều bản ghi theo danh sách id</comment>
   </data>
   <data name="Proc_UpdateByID" xml:space="preserve">
-    <value>Proc_{0}_UpdateByID</value>
+    <value>Proc_FixedAsset_UpdateByID</value>
     <comment>Template string cho procedure cập nhật 1 bản ghi theo ID</comment>
+  </data>
+  <data name="String1" xml:space="preserve">
+    <value />
+  </data>
+  <data name="UseMsg_ValidateDuplicateCode" xml:space="preserve">
+    <value>Mã tài sản đã tồn tại</value>
+    <comment>Thông báo cho người dùng khi mã tài sản tồn tại</comment>
   </data>
   <data name="UserMsg_DeleteFailed" xml:space="preserve">
     <value>Xóa bản ghi thất bại</value>
@@ -228,5 +243,13 @@
   <data name="UserMsg_ValidateFailed" xml:space="preserve">
     <value>Dữ liệu đầu vào không hợp lệ</value>
     <comment>Message cho user đọc khi Validate dữ liệu đầu vào thất bại</comment>
+  </data>
+  <data name="validateDepreciationRate" xml:space="preserve">
+    <value>Tỷ lệ hao mòn phải bằng 1/Số năm sử dụng</value>
+    <comment>validate nghiệp vụ</comment>
+  </data>
+  <data name="validateDepreciationYear" xml:space="preserve">
+    <value>Giá trị hao mòn năm phải nhỏ hơn hoặc bằng nguyên giá</value>
+    <comment>validate nghiệp vụ</comment>
   </data>
 </root>
